# drt-rs-vm-executor

./: CHANGELOG.md  Makefile
.github/workflows/: libvmexeccapi-build-linux-arm64.yml  libvmexeccapi-build.yml  rust-ci.yml
Docker/: arm64.dockerfile
c-api/: Cargo.toml  build.rs  libvmexeccapi.h  libvmoaeccapi.h
c-api/src/: capi_breakpoints.rs  capi_executor.rs  capi_instance.rs  capi_instance_cache.rs  capi_logger.rs  capi_metering.rs  capi_vm_hook_pointers.rs  capi_vm_hooks.rs  service_singleton.rs
meta/: Cargo.toml
vm-executor/: Cargo.toml  README.md
vm-executor-experimental/: Cargo.toml  README.md
vm-executor-experimental/src/: we_executor.rs  we_helpers.rs  we_imports.rs  we_instance.rs
vm-executor-experimental/src/middlewares/: we_metering.rs
vm-executor-wasmer/: Cargo.toml  README.md
vm-executor-wasmer/src/: lib.rs  wasmer_executor.rs  wasmer_imports.rs  wasmer_instance.rs  wasmer_metering.rs  wasmer_metering_helpers.rs  wasmer_service.rs  wasmer_vm_hooks.rs
vm-executor-wasmer/tests/common/: test_instance.rs
vm-executor/src/: vm_hooks.rs
vm-executor/src/new_traits/: vm_hooks_legacy_adapter.rs  vm_hooks_new.rs
