[package]
name = "dharitri-vm-executor-wasmer-experimental"
version = "1.0.4"
edition = "2021"

authors = ["DharitrI <contact@dharitri.org>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/TerraDharitri/drt-rs-vm-executor"
homepage = "https://dharitri.org/"
documentation = "https://docs.dharitri.org/"
description = "DharitrI VM Wasmer adapter (experimental)"
keywords = ["dharitri", "blockchain", "VM"]
categories = ["cryptography::cryptocurrencies"]

[lib]

[dependencies.dharitri-vm-executor]
version = "1.0.4"
path = "../vm-executor"

[dependencies]
wasmer = { version = "6.0", default-features = false, features = [
    "singlepass",
    "sys",
    "wat",
] }
wasmer-types = "6.0"

chrono = "0.4.23"
log = "0.4.17"
loupe = "0.1.3"
rc-new-cyclic-fallible = "1.0.0"
thiserror = "2.0"
