[package]
name = "dharitri-vm-executor-wasmer"
version = "1.0.3"
edition = "2021"
publish = false # will also be published, but it is not yet ready for that

[lib]

[dependencies.dharitri-vm-executor]
version = "1.0.3"
path = "../vm-executor"

[dependencies]
wasmer = { git = "https://github.com/TerraDharitri/wasmer", rev = "3d69a1334f499737f96b3488fac748afeaa41b84", default-features = false, features = [
    "singlepass",
    "sys",
    "universal",
    "wat",
] }

wasmer-vm = { git = "https://github.com/TerraDharitri/wasmer", rev = "3d69a1334f499737f96b3488fac748afeaa41b84" }
wasmer-types = { git = "https://github.com/TerraDharitri/wasmer", rev = "3d69a1334f499737f96b3488fac748afeaa41b84" }

chrono = "0.4.23"
log = "0.4.17"
loupe = "0.1.3"
