[package]
name = "dharitri-vm-executor-wasmer"
version = "1.0.4"
edition = "2021"
publish = false # cannot publish while still working with unpublished wasmer fork

authors = ["contact@dharitri.org"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/TerraDharitri/drt-rs-vm-executor"
homepage = "https://dharitri.org/"
documentation = "https://docs.dharitri.org/"
description = "Dharitri VM Wasmer adapter (production)"
keywords = ["dharitri", "blockchain", "VM"]
categories = ["cryptography::cryptocurrencies"]

[lib]

[features]
default = ["dharitri-vm-executor"]

[dependencies.dharitri-vm-executor]
version = "1.0.4"
path = "../vm-executor"
optional = true

## Optional dependency to published interfaces crate,
## to help with usage as a git-based dependency/
[dependencies.dharitri-vm-executor-published]
package = "dharitri-vm-executor"
version = "1.0.4"
optional = true

[dependencies]
wasmer = { git = "https://github.com/TerraDharitri/wasmer", rev = "3d69a1334f499737f96b3488fac748afeaa41b84", default-features = false, features = [
    "singlepass",
    "sys",
    "universal",
    "wat",
] }

wasmer-vm = { git = "https://github.com/TerraDharitri/wasmer", rev = "3d69a1334f499737f96b3488fac748afeaa41b84" }
wasmer-types = { git = "https://github.com/TerraDharitri/wasmer", rev = "3d69a1334f499737f96b3488fac748afeaa41b84" }

chrono = "0.4.23"
log = "0.4.17"
loupe = "0.1.3"
thiserror = "2.0"
