[package]
name = "dharitri-vm-executor"
version = "1.0.4"
edition = "2021"

authors = ["contact@dharitri.org"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/TerraDharitri/drt-rs-vm-executor"
homepage = "https://dharitri.org/"
documentation = "https://docs.dharitri.org/"
description = "DharitriX VM executor interface"
keywords = ["dharitri", "blockchain", "VM"]
categories = ["cryptography::cryptocurrencies"]

[lib]

