[package]
name = "dharitri-vm-executor"
version = "1.0.8"
edition = "2021"

authors = ["Dharitri <contact@dharitri.org>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/TerraDharitri/drt-vm-executor-rs"
homepage = "https://www.dharitri.org/"
documentation = "https://docs.www.dharitri.org/"
description = "Dharitri VM executor interface"
keywords = ["dharitri", "blockchain", "VM"]
categories = ["cryptography::cryptocurrencies"]

[lib]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
